2000-07-26  Peter Williams  <peterw@helixcode.com>
	
	* camel-mime-parser.c (folder_scan_init): Initialize
	outbuf to be "" -- it's not guaranteed to be zeroed.
	
	* camel-mime-utils.c (header_references_decode): Return
	if the header is NULL -> or "" <-. Don't do our stupid
	mailer trick if we point to \0.

2000-07-26  Dan Winship  <danw@helixcode.com>

	* camel-movemail.c (movemail_external): routine to call an
	external movemail program.
	(camel_movemail): Nuke return value, use movemail_external when
	available and useful, and don't delete "dest" on errors, since
	it might have started non-empty.

2000-07-26  Jeffrey Stedfast  <fejj@helixcode.com>

	* camel-url.c (camel_url_to_string): Should now always prepend a '/'
	before the path if it doesn't already exist.

	* providers/imap/camel-imap-folder.c: Fixed a few compiler warnings

2000-07-25  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c (imap_summary_free): Fixed the
	real problem that Peter was running into.

2000-07-25  Dan Winship  <danw@helixcode.com>

	* camel-mime-message.c (write_to_stream): Don't add a Mime-Version
	header to a message that already has one.

	* camel-internet-address.c (internet_encode): Don't put <>s around
	addresses with no name part.

2000-07-25  Peter Williams  <peterw@helixcode.com>

	* providers/imap/camel-imap-folder.c (imap_expunge): Set 
	imap_folder->summary to NULL after calling imap_summary_free,
	so we don't get stuck with a junk summary pointer. Should
	we free it at all?

2000-07-25  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c (camel_imap_folder_changed):
	Optimized to try and get the new message headers without reloading
	the entire summary from scratch.
	(imap_get_summary_internal): Will now sync() before attempting to
	reload the summary so that flags are set in the reloaded summary
	as well.

2000-07-24  Jeffrey Stedfast  <fejj@helixcode.com>
